--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
+    "@types/stripe-v3": "^3.1.28",
     "bootstrap": "^5.2.3",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -30,7 +32,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server -w  server/db.json -p 4000"
   },
   "eslintConfig": {
     "extends": [
