--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "1.21.2",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^29.5.1",
+    "@types/crypto-js": "^4.1.1",
     "@types/node": "^18.16.3",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
     "@types/stripe-v3": "^3.1.28",
     "bootstrap": "^5.2.3",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
@@ -24,8 +23,6 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.0",
     "react-scripts": "5.0.1",
-    "stripe": "^12.4.0",
-    "typescript": "^5.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -54,6 +51,11 @@
     ]
   },
   "devDependencies": {
-    "sass": "1.62.1"
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.1",
+    "sass": "1.62.1",
+    "typescript": "^5.0.4"
   }
 }
