--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@paypal/react-paypal-js": "7.8.3",
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "1.21.2",
     "bootstrap": "^5.2.3",
