--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,3 @@
 REACT_APP_BASE_URL="//"
 REACT_APP_STRIPE_PUBLISHABLE_KEY="pk_test_xxx"
-REACT_APP_STRIPE_SECRET_KEY="sk_test_xxx"
+REACT_APP_PAYPAL_CLIENT_ID="xxxxx_xxxxx"
